Fix allusers table text alignment

--- a/adminpanel/sass/global.scss
+++ b/adminpanel/sass/global.scss
@@ -217,7 +217,7 @@ body {
       background: #eee;
     }
     tbody tr:hover {
-      background: lighten(#36344d, 20%);
+      background: #b7b0ff;
       color: white;
     }
     .user_info {
